# try-hack-me-notes

./: README.md  pyproject.toml
src/try_hack_me_notes/: metasploit.md
src/try_hack_me_notes/blue/: [Task 1] Recon.md  [Task 2] Gain-access.md  [Task 3] Escalate.md  [Task 4] Cracking.md  [Task 5] Find flags.md
src/try_hack_me_notes/metasploit/: metasploit-task-5.md  metasploit-task-6.md  metasploit.md
src/try_hack_me_notes/postexploit/: [Task 2] Enumeration-w-powerview.md  [Task 3] Enumeration-w-Bloodhound.md
src/try_hack_me_notes/vulnversity/: [Task 2] Reconnaissance.md  [Task 3] GoBuster.md  [Task 4] Compromise-the-webserver.md  [Task 5] Priviledge-Escalation.md
tests/: test_try_hack_me_notes.py
